[project]
name = "reliably-cli"
description = "Reliably CLI"
dynamic = ["version"]
authors = [
    {name = "Sylvain Hellegouarch", email = "sylvain@reliably.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities"
]
dependencies = [
    "httpx[http2]>=0.23.0",
    "pydantic>=2.0",
    "typer>=0.6.1",
    "anyio[trio]>=3.6.2",
    "tomli>=1.1.0; python_version < \"3.11\"",
    "ruamel.yaml>=0.17.21",
    "rich>=13.3.1",
    "chaostoolkit-addons>=0.4.0",
    "chaostoolkit>=1.15.0",
    "chaostoolkit-lib>=1.33.1",
    "chaostoolkit-reliably>=0.22.0",
    "orjson>=3.8.10",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://reliably.com/"
Repository = "https://github.com/reliablyhq/cli"
Documentation = "https://reliably.com/docs/cli/"
Changelog = "https://github.com/reliablyhq/cli/blob/main/CHANGELOG.md"

[project.scripts]
reliably = "reliably_cli.__main__:cli"

[project.optional-dependencies]
bin-builder = ["pyoxidizer>=0.22.0"]
chaostoolkit = [
    "chaostoolkit-aws>=0.21.3",
    "chaostoolkit-kubernetes>=0.26.4",
    "chaostoolkit-google-cloud-platform>=0.8.2",
    "chaostoolkit-prometheus>=0.5.0",
    "chaostoolkit-opentracing>=0.9.1",
    "chaostoolkit-dynatrace>=0.2.0",
    "chaostoolkit-grafana>=0.2.0",
    "chaostoolkit-slack>=0.5.7",
    "chaostoolkit-datadog>=0.1.1",
    "jsonpath2>=0.4.5",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool]

[tool.ruff]
line-length = 80

[tool.black]
color = true
line-length = 80
target-version = ['py310']

[tool.isort]
line_length = 80
known_first_party = 'reliably_cli'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-v -rxs --cov reliably_cli --cov-report term-missing:skip-covered -p no:warnings"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.scripts]
lint = {composite = ["ruff reliably_cli/", "isort --check-only --profile black reliably_cli/", "black --check --diff reliably_cli/"]}
format = {composite = ["isort --profile black reliably_cli/", "black reliably_cli/", "ruff reliably_cli/ --fix"]}
test = {cmd = "pytest"}
build-bin = {cmd = "pyoxidizer build --release"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.0",
]
dev = [
    "black>=22.10.0",
    "isort>=5.10.1",
    "ruff>=0.0.83",
    "pytest>=7.2.0",
    "coverage>=6.5.0",
    "pytest-cov>=4.0.0",
    "pytest-sugar>=0.9.5",
    "rich>=12.6.0",
    "respx>=0.20.0",
    "pytest-asyncio>=0.20.1",
    "py>=1.11.0",
]
